[junit6] support for running junit6 IDEA-378235
(cherry picked from commit d8150843a509548fe1f04b8871a469a212584f0f)

IJ-MR-175463

GitOrigin-RevId: 59e5f52d5653e7bbac6ee4f9b9fdb62d12732f68