@@ -108,7 +108,7 @@ public class JUnitModulePathTest extends BaseConfigurationTestCase {
                                                           "modulePath/prod1", module);
     ModuleRootModificationUtil.updateModel(module, model -> {
       ContentEntry entry = model.getContentEntries()[0];
-      entry.removeSourceFolder(entry.getSourceFolders(JavaSourceRootType.SOURCE).get(0));
+      entry.removeSourceFolder(entry.getSourceFolders(JavaSourceRootType.SOURCE).getFirst());
     });
     JavaParameters params4Tests = configuration.getTestObject().createJavaParameters4Tests();
     assertEmpty(params4Tests.getModulePath().getPathList());
@@ -128,7 +128,7 @@ public class JUnitModulePathTest extends BaseConfigurationTestCase {
     PathsList modulePath = params4Tests.getModulePath();
 
     assertTrue("module path: " + modulePath.getPathsString(),
-                        modulePath.getPathList().stream().anyMatch(filePath -> filePath.contains("junit-jupiter-api")));
+               ContainerUtil.exists(modulePath.getPathList(), filePath -> filePath.contains("junit-jupiter-api")));
     //production module output is not on the module path
     assertFalse("module path: " + modulePath.getPathsString(),
                          modulePath.getPathList().contains(getCompilerOutputPath(module)));
@@ -138,7 +138,7 @@ public class JUnitModulePathTest extends BaseConfigurationTestCase {
     assertSize(2, modulePath.getPathList());
 
     //launcher should be put on the classpath
-    assertTrue(params4Tests.getClassPath().getPathList().stream().anyMatch(filePath -> filePath.contains("launcher")));
+    assertTrue(ContainerUtil.exists(params4Tests.getClassPath().getPathList(), filePath -> filePath.contains("launcher")));
   }
 
   public void testModuleInfoInTestModularizedJunit() throws Exception {
@@ -153,8 +153,8 @@ public class JUnitModulePathTest extends BaseConfigurationTestCase {
                           " --add-modules org.junit.platform.launcher", moduleOptions.getParametersList().getParametersString());
 
     PathsList classPath = params4Tests.getClassPath();
-    assertContainsElements(classPath.getPathList(), PathUtil.getJarPathForClass(JUnitStarter.class));
-    assertContainsElements(classPath.getPathList(), ContainerUtil.map(TestObject.getJUnit5RtFiles(), File::getPath));
+    assertContainsElements(classPath.getPathList(), TestObject.getJUnitRtPath().getPath());
+    assertContainsElements(classPath.getPathList(), ContainerUtil.map(TestObject.getJUnitRtFiles(JUnitStarter.JUNIT5_PARAMETER), File::getPath));
 
     PathsList modulePath = params4Tests.getModulePath();
     checkLibrariesOnPathList(module, modulePath);
@@ -165,7 +165,7 @@ public class JUnitModulePathTest extends BaseConfigurationTestCase {
     //test module output is on the module path
     assertTrue("module path: " + modulePath.getPathsString(),
                         modulePathList.contains(getCompilerOutputPath(module, true)));
-    assertTrue(modulePathList.stream().anyMatch(filePath -> filePath.contains("launcher")));
+    assertTrue(ContainerUtil.exists(modulePathList, filePath -> filePath.contains("launcher")));
   }
   
   public void testModuleInfoInTestModularizedJunitDependencyOnAnotherModule() throws Exception {
@@ -176,7 +176,7 @@ public class JUnitModulePathTest extends BaseConfigurationTestCase {
       model.addModuleOrderEntry(module1);
     });
     JpsMavenRepositoryLibraryDescriptor nonModularizedJupiterDescription =
-      new JpsMavenRepositoryLibraryDescriptor("org.junit.jupiter", "junit-jupiter-api", "5.5.2");
+      new JpsMavenRepositoryLibraryDescriptor("org.junit.jupiter", "junit-jupiter-api", "6.0.0-RC2");
     JUnitConfiguration configuration = setupConfiguration(nonModularizedJupiterDescription, "modulePath/test2", module);
     JavaParameters params4Tests = configuration.getTestObject().createJavaParameters4Tests();
     ParamsGroup moduleOptions = JavaTestFrameworkRunnableState.getJigsawOptions(params4Tests);
@@ -185,8 +185,8 @@ public class JUnitModulePathTest extends BaseConfigurationTestCase {
                           " --add-modules org.junit.platform.launcher", moduleOptions.getParametersList().getParametersString());
 
     PathsList classPath = params4Tests.getClassPath();
-    assertContainsElements(classPath.getPathList(), PathUtil.getJarPathForClass(JUnitStarter.class));
-    assertContainsElements(classPath.getPathList(), ContainerUtil.map(TestObject.getJUnit5RtFiles(), File::getPath));
+    assertContainsElements(classPath.getPathList(), TestObject.getJUnitRtPath().getPath());
+    assertContainsElements(classPath.getPathList(), ContainerUtil.map(TestObject.getJUnitRtFiles(JUnitStarter.JUNIT6_PARAMETER), File::getPath));
 
     PathsList modulePath = params4Tests.getModulePath();
     checkLibrariesOnPathList(module, modulePath);
@@ -198,7 +198,7 @@ public class JUnitModulePathTest extends BaseConfigurationTestCase {
     //test module output is on the module path
     assertTrue("module path: " + modulePath.getPathsString(),
                         modulePathList.contains(getCompilerOutputPath(module, true)));
-    assertTrue(modulePathList.stream().anyMatch(filePath -> filePath.contains("launcher")));
+    assertTrue(ContainerUtil.exists(modulePathList, filePath -> filePath.contains("launcher")));
   }
 
   private JUnitConfiguration setupConfiguration(JpsMavenRepositoryLibraryDescriptor libraryDescriptor, String sources, Module module) throws Exception {
